testsuite/tests/misc/invalid_static_expr/invalid_concat_3.lkt
import common

@repr_name(p"foo" & "bar")
class FooNode implements Node[FooNode] {
}
